[gd_scene load_steps=4 format=3 uid="uid://bh3ka4lbq2bdo"]

[ext_resource type="Script" path="res://ui/debug/debug_ui.gd" id="1_v2kts"]
[ext_resource type="FontFile" uid="uid://dtd7m4khr3aw2" path="res://assets/fonts/dogicapixel.ttf" id="2_usnd0"]

[sub_resource type="Theme" id="Theme_w7drn"]
default_font = ExtResource("2_usnd0")
default_font_size = 8

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource("1_v2kts")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_w7drn")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -172.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnEnemy" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spawn Enemy"

[node name="RestartScene" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Restart Scene"

[node name="ShowCollisions" type="CheckBox" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Show Collisions"

[connection signal="pressed" from="Control/VBoxContainer/SpawnEnemy" to="." method="_on_spawn_enemy_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartScene" to="." method="_on_restart_scene_pressed"]
[connection signal="toggled" from="Control/VBoxContainer/ShowCollisions" to="." method="_on_show_collisions_toggled"]
