class_name DebugUI
extends CanvasLayer

signal spawn_enemy


func _on_spawn_enemy_pressed() -> void:
	pass # Replace with function body.


func _on_restart_scene_pressed() -> void:
	pass # Replace with function body.


func _on_show_collisions_toggled(toggled_on: bool) -> void:
	pass
	#get_tree().debug_collisions_hint = toggled_on
